api for admin to set password
